# go-genproto-googleads

./: Makefile  go.mod  go.sum
go-bazel/: common.bazel  enums.bazel  errors.bazel  main.bazel  resources.bazel  services.bazel  v11.bazel
pb/v10/common/: ad_asset.pb.go  ad_type_infos.pb.go  asset_policy.pb.go  asset_types.pb.go  asset_usage.pb.go  audiences.pb.go  bidding.pb.go  click_location.pb.go  criteria.pb.go  criterion_category_availability.pb.go  custom_parameter.pb.go  customizer_value.pb.go  dates.pb.go  explorer_auto_optimizer_setting.pb.go  extensions.pb.go  feed_common.pb.go  feed_item_set_filter_type_infos.pb.go  final_app_url.pb.go  frequency_cap.pb.go  keyword_plan_common.pb.go  matching_function.pb.go  metric_goal.pb.go  metrics.pb.go  offline_user_data.pb.go  policy.pb.go  policy_summary.pb.go  real_time_bidding_setting.pb.go  segments.pb.go  simulation.pb.go  tag_snippet.pb.go  targeting_setting.pb.go  text_label.pb.go  url_collection.pb.go  user_lists.pb.go  value.pb.go
pb/v10/enums/: access_invitation_status.pb.go  access_reason.pb.go  access_role.pb.go  account_budget_proposal_status.pb.go  account_budget_proposal_type.pb.go  account_budget_status.pb.go  account_link_status.pb.go  ad_customizer_placeholder_field.pb.go  ad_destination_type.pb.go  ad_group_ad_rotation_mode.pb.go  ad_group_ad_status.pb.go  ad_group_criterion_approval_status.pb.go  ad_group_criterion_status.pb.go  ad_group_status.pb.go  ad_group_type.pb.go  ad_network_type.pb.go  ad_serving_optimization_status.pb.go  ad_strength.pb.go  ad_type.pb.go  advertising_channel_sub_type.pb.go  advertising_channel_type.pb.go  affiliate_location_feed_relationship_type.pb.go  affiliate_location_placeholder_field.pb.go  age_range_type.pb.go  app_campaign_app_store.pb.go  app_campaign_bidding_strategy_goal_type.pb.go  app_payment_model_type.pb.go  app_placeholder_field.pb.go  app_store.pb.go  app_url_operating_system_type.pb.go  asset_field_type.pb.go  asset_group_status.pb.go  asset_link_status.pb.go  asset_performance_label.pb.go  asset_set_asset_status.pb.go  asset_set_link_status.pb.go  asset_set_status.pb.go  asset_set_type.pb.go  asset_type.pb.go  async_action_status.pb.go  (+254 more)
pb/v10/errors/: access_invitation_error.pb.go  account_budget_proposal_error.pb.go  account_link_error.pb.go  ad_customizer_error.pb.go  ad_error.pb.go  ad_group_ad_error.pb.go  ad_group_bid_modifier_error.pb.go  ad_group_criterion_customizer_error.pb.go  ad_group_criterion_error.pb.go  ad_group_customizer_error.pb.go  ad_group_error.pb.go  ad_group_feed_error.pb.go  ad_parameter_error.pb.go  ad_sharing_error.pb.go  (+126 more)
v10/: account_budget_proposal_client.go  account_link_client.go  ad_client.go  ad_group_ad_client.go  ad_group_ad_label_client.go  ad_group_asset_client.go  ad_group_bid_modifier_client.go  ad_group_client.go  ad_group_criterion_client.go  ad_group_criterion_customizer_client.go  ad_group_criterion_label_client.go  ad_group_customizer_client.go  ad_group_extension_setting_client.go  ad_group_feed_client.go  ad_group_label_client.go  ad_parameter_client.go  asset_client.go  asset_group_asset_client.go  asset_group_client.go  asset_group_listing_group_filter_client.go  asset_group_signal_client.go  asset_set_asset_client.go  asset_set_client.go  audience_client.go  batch_job_client.go  bidding_data_exclusion_client.go  bidding_seasonality_adjustment_client.go  bidding_strategy_client.go  billing_setup_client.go  campaign_asset_client.go  campaign_asset_set_client.go  campaign_bid_modifier_client.go  campaign_budget_client.go  campaign_client.go  campaign_conversion_goal_client.go  campaign_criterion_client.go  campaign_customizer_client.go  campaign_draft_client.go  campaign_experiment_client.go  campaign_extension_setting_client.go  (+63 more)
v11/: account_budget_proposal_client.go  account_link_client.go  ad_client.go  ad_group_ad_client.go  ad_group_ad_label_client.go  ad_group_asset_client.go  ad_group_bid_modifier_client.go  ad_group_client.go  ad_group_criterion_client.go  ad_group_criterion_customizer_client.go  ad_group_criterion_label_client.go  ad_group_customizer_client.go  ad_group_extension_setting_client.go  ad_group_feed_client.go  ad_group_label_client.go  ad_parameter_client.go  asset_client.go  asset_group_asset_client.go  asset_group_client.go  asset_group_listing_group_filter_client.go  asset_group_signal_client.go  asset_set_asset_client.go  asset_set_client.go  audience_client.go  audience_insights_client.go  batch_job_client.go  bidding_data_exclusion_client.go  bidding_seasonality_adjustment_client.go  bidding_strategy_client.go  billing_setup_client.go  campaign_asset_client.go  campaign_asset_set_client.go  campaign_bid_modifier_client.go  campaign_budget_client.go  campaign_client.go  campaign_conversion_goal_client.go  campaign_criterion_client.go  campaign_customizer_client.go  campaign_draft_client.go  campaign_experiment_client.go  (+64 more)
v9/: accessible_bidding_strategy_client.go  account_budget_client.go  account_budget_proposal_client.go  account_link_client.go  ad_client.go  ad_group_ad_asset_view_client.go  ad_group_ad_client.go  ad_group_ad_label_client.go  ad_group_asset_client.go  ad_group_audience_view_client.go  ad_group_bid_modifier_client.go  ad_group_client.go  ad_group_criterion_client.go  ad_group_criterion_customizer_client.go  ad_group_criterion_label_client.go  ad_group_criterion_simulation_client.go  ad_group_customizer_client.go  ad_group_extension_setting_client.go  ad_group_feed_client.go  ad_group_label_client.go  ad_group_simulation_client.go  ad_parameter_client.go  ad_schedule_view_client.go  age_range_view_client.go  asset_client.go  asset_field_type_view_client.go  asset_group_asset_client.go  asset_group_client.go  asset_group_listing_group_filter_client.go  asset_set_asset_client.go  asset_set_client.go  batch_job_client.go  bidding_data_exclusion_client.go  bidding_seasonality_adjustment_client.go  bidding_strategy_client.go  bidding_strategy_simulation_client.go  billing_setup_client.go  campaign_asset_client.go  campaign_asset_set_client.go  campaign_audience_view_client.go  (+113 more)
(+1738 files in other folders)
