##############################################################################
# Go
##############################################################################
load(
    "@com_google_googleapis_imports//:imports.bzl",
    "go_proto_library",
)

go_proto_library(
    name = "resources_go_proto",
    importpath = "google.golang.org/genproto/googleapis/ads/googleads/v11/resources",
    protos = [":resources_proto"],
)