##############################################################################
# Go
##############################################################################
load(
    "@com_google_googleapis_imports//:imports.bzl",
    "go_proto_library",
)

go_proto_library(
    name = "resources_go_proto",
    importpath = "google.golang.org/genproto/googleapis/ads/googleads/VERSION/resources",
    protos = [":resources_proto"],
)