##############################################################################
# Go
##############################################################################
load(
    "@com_google_googleapis_imports//:imports.bzl",
    "go_gapic_assembly_pkg",
    "go_gapic_library",
    "go_test",
)

go_gapic_library(
    name = "googleads_go_gapic",
    srcs = [
        ":googleads_proto_with_info",
    ],
    gapic_yaml = "googleads_gapic.yaml",
    grpc_service_config = "googleads_grpc_service_config.json",
    service_yaml = "googleads_v11.yaml",
    importpath = "github.com/fresh8/go-genproto-googleads/v11;googleads",
    deps = [
        "//google/ads/googleads/v11/common:common_go_proto",
        "//google/ads/googleads/v11/enums:enums_go_proto",
        "//google/ads/googleads/v11/resources:resources_go_proto",
        "//google/ads/googleads/v11/services:services_go_proto",
    ],
)

go_test(
    name = "googleads_go_gapic_test",
    srcs = [":googleads_go_gapic_srcjar_test"],
    embed = [":googleads_go_gapic"],
    importpath = "google.golang.org/google/ads/googleads/v11",
)

# Open Source Packages
go_gapic_assembly_pkg(
    name = "gapi-ads-googleads-v11-go",
    deps = [
        ":googleads_go_gapic",
        "//google/ads/googleads/v11/common:common_go_proto",
        "//google/ads/googleads/v11/enums:enums_go_proto",
        "//google/ads/googleads/v11/errors:errors_go_proto",
        "//google/ads/googleads/v11/resources:resources_go_proto",
        "//google/ads/googleads/v11/services:services_go_proto",
    ],
)